@@ -83,6 +83,34 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|map
+operator|.
+name|QueryDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|SQLTemplateDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|modeler
 operator|.
 name|ProjectController
@@ -102,34 +130,6 @@ operator|.
 name|util
 operator|.
 name|DbAdapterInfo
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|map
-operator|.
-name|QueryDescriptor
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|map
-operator|.
-name|SQLTemplateDescriptor
 import|;
 end_import
 
@@ -389,27 +389,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
+name|*
 import|;
 end_import
 
@@ -420,16 +400,6 @@ operator|.
 name|util
 operator|.
 name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -524,6 +494,85 @@ expr_stmt|;
 name|initView
 argument_list|()
 expr_stmt|;
+block|}
+specifier|private
+name|void
+name|prepareScriptAreas
+parameter_list|()
+block|{
+for|for
+control|(
+name|String
+name|key
+range|:
+name|DbAdapterInfo
+operator|.
+name|getStandardAdapters
+argument_list|()
+control|)
+block|{
+name|JCayenneTextPane
+name|currPane
+init|=
+operator|new
+name|JUndoableCayenneTextPane
+argument_list|(
+operator|new
+name|SQLSyntaxConstants
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|currPane
+operator|.
+name|setName
+argument_list|(
+name|key
+argument_list|)
+expr_stmt|;
+name|currPane
+operator|.
+name|getDocument
+argument_list|()
+operator|.
+name|addDocumentListener
+argument_list|(
+operator|new
+name|CustomListener
+argument_list|(
+name|currPane
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|builder
+operator|.
+name|add
+argument_list|(
+name|currPane
+operator|.
+name|getScrollPane
+argument_list|()
+argument_list|,
+name|cc
+operator|.
+name|xy
+argument_list|(
+literal|3
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|panes
+operator|.
+name|add
+argument_list|(
+name|currPane
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|protected
 name|void
@@ -724,7 +773,7 @@ name|FormLayout
 argument_list|(
 literal|"fill:100dlu, 3dlu, fill:100dlu:grow"
 argument_list|,
-literal|"3dlu, fill:p:grow"
+literal|"3dlu, fill:100dlu:grow"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -763,7 +812,7 @@ name|add
 argument_list|(
 name|textPane
 operator|.
-name|getPane
+name|getScrollPane
 argument_list|()
 argument_list|,
 name|cc
@@ -794,6 +843,9 @@ name|BorderLayout
 operator|.
 name|CENTER
 argument_list|)
+expr_stmt|;
+name|prepareScriptAreas
+argument_list|()
 expr_stmt|;
 block|}
 name|void
@@ -1004,107 +1056,6 @@ condition|)
 block|{
 return|return;
 block|}
-name|boolean
-name|exist
-init|=
-literal|false
-decl_stmt|;
-for|for
-control|(
-name|JCayenneTextPane
-name|textPane
-range|:
-name|panes
-control|)
-block|{
-if|if
-condition|(
-name|textPane
-operator|.
-name|getName
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-name|key
-argument_list|)
-condition|)
-block|{
-name|exist
-operator|=
-literal|true
-expr_stmt|;
-break|break;
-block|}
-block|}
-if|if
-condition|(
-operator|!
-name|exist
-condition|)
-block|{
-name|JCayenneTextPane
-name|textPane
-init|=
-operator|new
-name|JUndoableCayenneTextPane
-argument_list|(
-operator|new
-name|SQLSyntaxConstants
-argument_list|()
-argument_list|)
-decl_stmt|;
-name|textPane
-operator|.
-name|setName
-argument_list|(
-name|key
-argument_list|)
-expr_stmt|;
-name|textPane
-operator|.
-name|getDocument
-argument_list|()
-operator|.
-name|addDocumentListener
-argument_list|(
-operator|new
-name|CustomListener
-argument_list|(
-name|textPane
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|builder
-operator|.
-name|add
-argument_list|(
-name|textPane
-operator|.
-name|getPane
-argument_list|()
-argument_list|,
-name|cc
-operator|.
-name|xy
-argument_list|(
-literal|3
-argument_list|,
-literal|2
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|panes
-operator|.
-name|add
-argument_list|(
-name|textPane
-argument_list|)
-expr_stmt|;
-block|}
 specifier|final
 name|String
 name|text
@@ -1164,7 +1115,7 @@ argument_list|)
 expr_stmt|;
 name|textPane
 operator|.
-name|getPane
+name|getScrollPane
 argument_list|()
 operator|.
 name|setVisible
@@ -1177,30 +1128,18 @@ operator|.
 name|getPane
 argument_list|()
 operator|.
-name|setEditable
-argument_list|(
-literal|true
-argument_list|)
+name|requestFocusInWindow
+argument_list|()
 expr_stmt|;
 block|}
 else|else
 block|{
 name|textPane
 operator|.
-name|getPane
+name|getScrollPane
 argument_list|()
 operator|.
 name|setVisible
-argument_list|(
-literal|false
-argument_list|)
-expr_stmt|;
-name|textPane
-operator|.
-name|getPane
-argument_list|()
-operator|.
-name|setEditable
 argument_list|(
 literal|false
 argument_list|)
