@@ -21,83 +21,91 @@ end_package
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|Color
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|Main
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|Cursor
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|util
+operator|.
+name|ModelerUtil
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|Dimension
+name|cayenne
+operator|.
+name|swing
+operator|.
+name|components
+operator|.
+name|textpane
+operator|.
+name|syntax
+operator|.
+name|SQLSyntaxConstants
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|Graphics
+name|cayenne
+operator|.
+name|swing
+operator|.
+name|components
+operator|.
+name|textpane
+operator|.
+name|syntax
+operator|.
+name|SyntaxConstant
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|slf4j
 operator|.
-name|Image
+name|Logger
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|slf4j
 operator|.
-name|Point
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|Rectangle
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|event
-operator|.
-name|MouseEvent
+name|LoggerFactory
 import|;
 end_import
 
@@ -225,91 +233,83 @@ end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|Main
+name|Color
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|util
-operator|.
-name|ModelerUtil
+name|Cursor
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
-operator|.
-name|swing
-operator|.
-name|components
-operator|.
-name|textpane
-operator|.
-name|syntax
-operator|.
-name|SQLSyntaxConstants
+name|Dimension
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
-operator|.
-name|swing
-operator|.
-name|components
-operator|.
-name|textpane
-operator|.
-name|syntax
-operator|.
-name|SyntaxConstant
+name|Graphics
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|slf4j
+name|awt
 operator|.
-name|Logger
+name|Image
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|slf4j
+name|awt
 operator|.
-name|LoggerFactory
+name|Point
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|Rectangle
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|MouseEvent
 import|;
 end_import
 
